syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.tq.test.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message ByeRequest {
    string name = 1;
}

message ByeReply {
    string message = 1;
}

service Fareweller {
  rpc SayGoodBye(ByeRequest) returns (ByeReply) {}
}